# algorithms

./: CMakeLists.txt  README.md  project.config
src/: main.cpp  maths.cpp  maths.h
test/: test.cpp
